[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Lobby/Lobby.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Main/GameTitle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/UI/LanguageLabel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Fonts/font_32.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Fonts/font_24.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scenes/Lobby/TabContainer.gd" type="Script" id=6]
[ext_resource path="res://Scenes/UI/LanguageButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Lobby/Textures/britan.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Lobby/Textures/poland.png" type="Texture" id=9]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.188235, 0.188235, 0.188235, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1260.0
margin_bottom = 708.0
rect_pivot_offset = Vector2( 1720, 50 )
custom_constants/separation = 100

[node name="GameTitle" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 197.0
margin_right = 1240.0
margin_bottom = 627.0
custom_constants/separation = 40

[node name="LobbyHeader" parent="MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 1240.0
align = 1
text_id = "lobby.header"

[node name="CenterContainer3" type="CenterContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 83.0
margin_right = 1240.0
margin_bottom = 180.0

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/CenterContainer3"]
margin_left = 495.0
margin_right = 745.0
margin_bottom = 97.0
custom_constants/separation = 10
alignment = 1

[node name="Name" parent="MarginContainer/VBoxContainer/VBoxContainer/CenterContainer3/HBoxContainer" instance=ExtResource( 3 )]
margin_right = 250.0
align = 1
text_id = "lobby.enterName"
sufix = ":"

[node name="NameEnter" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_top = 53.0
margin_right = 250.0
margin_bottom = 97.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = ExtResource( 4 )
max_length = 16

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 220.0
margin_right = 1240.0
margin_bottom = 220.0

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 260.0
margin_right = 1240.0
margin_bottom = 430.0

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/CenterContainer2"]
margin_left = 320.0
margin_right = 920.0
margin_bottom = 170.0
rect_min_size = Vector2( 600, 0 )
custom_fonts/font = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Create Game" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/CenterContainer2/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 44.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/CenterContainer2/TabContainer/Create Game"]
margin_left = 10.0
margin_top = 10.0
margin_right = 582.0
margin_bottom = 112.0
custom_constants/separation = 10

[node name="Title" parent="MarginContainer/VBoxContainer/VBoxContainer/CenterContainer2/TabContainer/Create Game/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 572.0
text_id = "lobby.createGame"
sufix = ":"

[node name="CreateGameBtn" parent="MarginContainer/VBoxContainer/VBoxContainer/CenterContainer2/TabContainer/Create Game/VBoxContainer" instance=ExtResource( 7 )]
margin_top = 53.0
margin_right = 572.0
margin_bottom = 102.0
text = ""
text_id = "lobby.createGameBtn"

[node name="Join Game" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/CenterContainer2/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 44.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/CenterContainer2/TabContainer/Join Game"]
margin_left = 10.0
margin_top = 10.0
margin_right = 582.0
margin_bottom = 166.0
custom_constants/separation = 10

[node name="Title" parent="MarginContainer/VBoxContainer/VBoxContainer/CenterContainer2/TabContainer/Join Game/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 53.0
margin_right = 572.0
margin_bottom = 96.0
text_id = "lobby.enterIp"
sufix = ":"

[node name="GameIP" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer/CenterContainer2/TabContainer/Join Game/VBoxContainer"]
margin_top = 44.0
margin_right = 572.0
margin_bottom = 88.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = ExtResource( 4 )
max_length = 16

[node name="JoinGameBtn" parent="MarginContainer/VBoxContainer/VBoxContainer/CenterContainer2/TabContainer/Join Game/VBoxContainer" instance=ExtResource( 7 )]
margin_top = 112.0
margin_right = 572.0
margin_bottom = 161.0
text = ""
text_id = "lobby.joinGameBtn"

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -126.0
margin_bottom = 52.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
margin_top = 20.0
margin_right = 106.0
margin_bottom = 52.0
custom_constants/separation = 10

[node name="EN_Flag" type="TextureButton" parent="MarginContainer2/HBoxContainer"]
margin_right = 48.0
margin_bottom = 32.0
texture_normal = ExtResource( 8 )

[node name="PL_Flag" type="TextureButton" parent="MarginContainer2/HBoxContainer"]
margin_left = 58.0
margin_right = 106.0
margin_bottom = 32.0
texture_normal = ExtResource( 9 )
[connection signal="pressed" from="MarginContainer2/HBoxContainer/EN_Flag" to="." method="_on_EN_Flag_pressed"]
[connection signal="pressed" from="MarginContainer2/HBoxContainer/PL_Flag" to="." method="_on_PL_Flag_pressed"]
